--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "extern/Gxt.Net"]
-	path = extern/Gxt.Net
-	url = https://github.com/game-exchange-token/Gxt.Net
+[submodule "extern/Elin.Gxt"]
+	path = extern/Elin.Gxt
+	url = https://github.com/hardliner66/Elin.Gxt
