--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extern/Elin.Gxt"]
 	path = extern/Elin.Gxt
-	url = https://github.com/hardliner66/Elin.Gxt
+	url = https://github.com/Elin-Gxt/Elin.Gxt
