--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -54,6 +54,9 @@
         <Reference Include="$(ElinGamePath)\Elin_Data\Managed\System.Core.dll">
             <Private>False</Private>
         </Reference>
+        <Reference Include="$(ElinGamePath)\Elin_Data\Managed\System.Memory.dll">
+            <Private>False</Private>
+        </Reference>
         <Reference Include="$(ElinGamePath)\Elin_Data\Managed\com.rlabrecque.steamworks.net.dll">
             <Private>False</Private>
         </Reference>
