--- a/Elin.Gxt.IdCard/package/package.xml
+++ b/Elin.Gxt.IdCard/package/package.xml
@@ -12,4 +12,5 @@
     This mod doesn't do much on its own, but is intended to create ID Cards for use in other mods.
     </description>
     <builtin>false</builtin>
+    <visibility>Unlisted</visibility>
 </Meta>
